rustdocs/errors/rust-bitcoin-units-src-locktime-absolute-error.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:153:9
    |
153 |     pub(super) fn invalid_int<S: Into<InputString>>(
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:161:9
    |
161 |     pub(super) fn display(
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:246:9
    |
246 |     pub(super) const fn invalid_height(n: u32) -> Self {
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:251:9
    |
251 |     pub(super) const fn invalid_time(n: u32) -> Self {
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:41:9
   |
41 |     pub(super) lock: MedianTimePast,
   |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:43:9
   |
43 |     pub(super) incompatible: Height,
   |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:72:9
   |
72 |     pub(super) lock: Height,
   |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:74:9
   |
74 |     pub(super) incompatible: MedianTimePast,
   |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:141:5
    |
141 | pub(super) enum ParseError {
    |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:12:5
   |
12 | use super::{Height, MedianTimePast, LOCK_TIME_THRESHOLD};
   |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:5:5
  |
5 | use core::convert::Infallible;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
 --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:8:5
  |
8 | use internals::error::InputString;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
5 + extern crate internals;
  |

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:6:5
  |
6 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
   --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:168:13
    |
168 |         use core::num::IntErrorKind;
    |             ^^^^
    |             |
    |             you might be missing crate `core`
    |             help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `crate::parse_int`
  --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:13:12
   |
13 | use crate::parse_int::ParseIntError;
   |            ^^^^^^^^^ use of unresolved module or unlinked crate `parse_int`
   |
help: you might be missing a crate named `parse_int`, add it to your project and import it in your code
   |
 5 + extern crate parse_int;
   |

error: aborting due to 15 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
